# biblio

./: .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  Makefile  README-extract-doi.md  README.md  extract_doi.py  mkdocs.yml  pyproject.toml
.claude/: settings.json
.codex/: config.toml
.datalad/: config
.projio/: config.yml  packages.yml  projio.mk
docs/: index.md
docs/archive/legacy-pipeline/: README.md  Snakefile  environment.yml  manifest.ingest.jsonl  manifest.jsonl  mkdocs.yml  pandoc-defaults.yaml  pyproject.toml  pytest.ini  setup_repo.py
docs/archive/legacy-pipeline/data/01_bronze/: pdf_map.json  project.bib  project.normalized.bib  registry.json
docs/archive/legacy-pipeline/data/01_bronze/tiny_corpus/: selection.txt
docs/archive/legacy-pipeline/data/02_raw/docling/: zhigalovTravellingWavesObserved2022.json
docs/archive/legacy-pipeline/data/02_raw/grobid/: zhigalovTravellingWavesObserved2022.tei.meta.json  zhigalovTravellingWavesObserved2022.tei.xml
docs/archive/legacy-pipeline/data/02_raw/tiny_corpus/docling/: 2010 - Wayback Machine.json  Abraham et al. - 2021 - Slow Cortical Waves through Cyclicity Analysis.json  Aggarwal et al. - 2022 - Visual evoked feedforward–feedback traveling waves.json  Aksenov and Beuter - 2021 - Analysis of phase waves in the ECoG data.json  Alamia und VanRullen - 2019 - Alpha oscillations and traveling waves Signatures.json
docs/archive/legacy-pipeline/data/02_raw/tiny_corpus/grobid/: 2010 - Wayback Machine.xml  Abraham et al. - 2021 - Slow Cortical Waves through Cyclicity Analysis.xml  Aggarwal et al. - 2022 - Visual evoked feedforward–feedback traveling waves.xml  Aksenov and Beuter - 2021 - Analysis of phase waves in the ECoG data.xml  Alamia und VanRullen - 2019 - Alpha oscillations and traveling waves Signatures.xml
docs/archive/legacy-pipeline/data/03_silver/: zhigalovTravellingWavesObserved2022.json
docs/archive/legacy-pipeline/data/03_silver/tiny_corpus/: 2010 - Wayback Machine.json  Abraham et al. - 2021 - Slow Cortical Waves through Cyclicity Analysis.json  Aggarwal et al. - 2022 - Visual evoked feedforward–feedback traveling waves.json  Aksenov and Beuter - 2021 - Analysis of phase waves in the ECoG data.json  Alamia und VanRullen - 2019 - Alpha oscillations and traveling waves Signatures.json
docs/archive/legacy-pipeline/data/04_gold/: validation.json
docs/archive/legacy-pipeline/docs/: index.md  installation.md
docs/archive/legacy-pipeline/docs/assets/figures/: fig-01-medallion.md  fig-02-data-lakehouse-layering.md  fig-03-pdf-to-structured-knowledge-pipeline.md  fig-04-automated-extraction-flowchart.md  fig-05-co-citation-and-bibliographic-coupling-networks.md  fig-06-global-citation-graph-integration.md  fig-07-semantic-mapping-between-document-parts.md  fig-08-hierarchical-document-chunking-for-rag.md  fig-09-context-enriched-vectorization.md
docs/archive/legacy-pipeline/docs/concepts/: 01-modern-bibliography-framework.md
docs/archive/legacy-pipeline/docs/design/: 01-goals-and-nongoals.md
docs/archive/legacy-pipeline/docs/implementation/: 01-phases-and-milestones.md  02-repo-layout-and-artifacts.md  03-cli-and-task-graph.md
docs/archive/legacy-pipeline/docs/pipeline/: 01-overview.md  02-zotero-ingestion.md  03-docling-extraction.md  04-grobid-extraction.md  05-openalex-linking.md  06-alignment-and-reconciliation.md  07-vectorization-and-indexing.md  08-build-manifest.md
docs/archive/legacy-pipeline/docs/pitch/: 01-problem.md  02-solution.md  03-differentiation.md  04-demo-walkthrough.md  05-roadmap.md
docs/archive/legacy-pipeline/docs/reference/: 01-schemas.md
docs/archive/legacy-pipeline/docs/user/: 01-user-demands.md
docs/archive/legacy-pipeline/logs/: missing_pdfs.txt
docs/archive/legacy-pipeline/overrides/: alignment.yaml  identities.yaml
docs/archive/legacy-pipeline/reports/: pdf_linking.json
docs/archive/legacy-pipeline/src/: download_figures.py  download_fulltext.py  fetchpdfs-rename.py  figconfig.py  merge.py  pdf_fulltext.py
docs/archive/legacy-pipeline/src/bib_pipeline/: __init__.py  config.py  models.py
docs/archive/legacy-pipeline/src/scripts/: expand_graph.py  extract_docling.py  extract_grobid.py  extract_raw.py  fetch_missing.py  generate_manifest.py  ingest_bronze.py  internalize_pdfs.py  link_pdfs.py  merge_bib.py  normalize_bib_files.py  promote_docling.py  reconcile_silver.py  run_pipeline_tests.py  validate_bib.py  validate_pipeline.py
docs/archive/legacy-pipeline/tests/: test_pipeline.py
example/: README.md
(+309 files in other folders)
