[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biblio-tools"
version = "0.1.1"
description = "Portable bibliography workspace tool"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Arash Shahidi"}]
keywords = ["bibliography", "bibtex", "docling", "openalex", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = [
  "pyyaml",
  "pybtex",
]

[project.urls]
Homepage = "https://github.com/arashshahidi1997/biblio"
Repository = "https://github.com/arashshahidi1997/biblio"
Issues = "https://github.com/arashshahidi1997/biblio/issues"

[project.optional-dependencies]
bibtex = []
openalex = ["httpx", "tenacity", "tqdm"]
dev = ["pytest", "build", "twine", "pybtex", "httpx", "tenacity", "tqdm"]

[project.scripts]
biblio = "biblio.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["biblio", "biblio.*"]

[tool.setuptools.package-data]
biblio = ["templates/**/*.tmpl"]
